--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,33 @@
         "activeTab", "storage", "<all_urls>"
     ],
 
+    "commands": {
+        "start-taking-screenshot": {
+          "suggested_key": {
+            "default": "Ctrl+Shift+S",
+            "mac": "Command+Shift+S"
+          },
+          "description": "Start Taking ScreenShot"
+        },
+
+        "capture-screen": {
+            "suggested_key": {
+              "default": "Ctrl+Shift+A",
+              "mac": "Command+Shift+A"
+            },
+            "description": "Capture Screen"
+          },
+
+        "_execute_browser_action": {
+          "suggested_key": {
+            "windows": "Ctrl+Shift+Y",
+            "mac": "Command+Shift+Y",
+            "chromeos": "Ctrl+Shift+U",
+            "linux": "Ctrl+Shift+J"
+          }
+        }
+      },
+
     "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
 
     "manifest_version": 2
